--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host 0.0.0.0",
-    "build": "vite build",
+    "dev": "node update-news-data.js && vite --host 0.0.0.0",
+    "build": "node update-news-data.js && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.8.3",
+    "axios": "^1.10.0",
     "crypto-js": "^4.2.0",
     "marked": "^15.0.7",
     "uuid": "^11.1.0",
